--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.17412.write.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/DB_Knob.obj
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/a4b1badf7d9ea00b/INCLUDE_JUCE_GRAPHICS.ipch
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/4804349a191a73b4/DB_KNOB.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/cde40b015745a749/DB_LOOKFEEL.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/d17ef2a558f05fcb/INCLUDE_JUCE_GUI_BASICS.ipch
+Builds/VisualStudio2019/x64/Debug/App/DB_LookFeel.obj
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.write.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.20356.delete.1.tlog
