--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/d17ef2a558f05fcb/INCLUDE
 Builds/VisualStudio2019/x64/Debug/App/DB_LookFeel.obj
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.write.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.20356.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.10248.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.4656.delete.1.tlog
