--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,12 @@ Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.write.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.20356.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.10248.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.4656.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.6380.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.27420.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.27128.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.24728.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.24160.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23764.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.22860.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.17576.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.16752.delete.1.tlog
