--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,11 @@ Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23764.delete.1.tl
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.22860.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.17576.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.16752.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.8268.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.6372.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.29032.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.21356.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19856.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19660.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.11588.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/BinaryData.obj
