--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19856.delete.1.tl
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19660.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.11588.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/BinaryData.obj
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e9dc5917e8bf3e14/INCLUDE_JUCE_AUDIO_DEVICES.ipch
