--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,6 @@ Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19660.delete.1.tl
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.11588.delete.1.tlog
 Builds/VisualStudio2019/x64/Debug/App/BinaryData.obj
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e9dc5917e8bf3e14/INCLUDE_JUCE_AUDIO_DEVICES.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/791d5f8e81180eb3/HEADERBAR.ipch
+Builds/VisualStudio2019/x64/Debug/App/HeaderBar.obj
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.7832.delete.1.tlog
