--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,17 @@ Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e9dc5917e8bf3e14/INCLUDE
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/791d5f8e81180eb3/HEADERBAR.ipch
 Builds/VisualStudio2019/x64/Debug/App/HeaderBar.obj
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.7832.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/ModuleSpace.obj
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/unsuccessfulbuild
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952.write.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952.read.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952.delete.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-rc.write.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-rc.read.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-cvtres.write.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-cvtres.read.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-rc.write.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-rc.read.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-cvtres.write.1.tlog
+Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-cvtres.read.1.tlog
