--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-cvtres.write.1.tl
 Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-cvtres.read.1.tlog
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/dcb7ce52cedc0893/MODULESPACE.ipch
 *.tlog
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e23dd4667527c4e9/INCLUDE_JUCE_EVENTS.ipch
