Adding additional namespace within DB

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/107a6ca862e421c2/LOOKFEE
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/b43786ef88b95662/MAIN.ipch
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/42e6ca5a20c2bab5/MAINCOMPONENT.ipch
 Juce Dials.jucer
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/531ca623b2643ebe/INCLUDE_JUCE_AUDIO_BASICS.ipch
