Added separate tab element to the module space with button functionality

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,10 @@ Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/b43786ef88b95662/MAIN.ip
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/42e6ca5a20c2bab5/MAINCOMPONENT.ipch
 Juce Dials.jucer
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/531ca623b2643ebe/INCLUDE_JUCE_AUDIO_BASICS.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/1191722bd1ad1956/TESTCOMPONENT.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/3be920b1fd2c8155/TABELEMENT.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/44f64e9bce6b3d0e/TABELEMENT.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/6991a1c7304911e5/INCLUDE_JUCE_CORE.ipch
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/99ba81d12580ed10/TESTCOMPONENT.ipch
+Builds/VisualStudio2019/x64/Debug/App/TabElement.obj
+Builds/VisualStudio2019/x64/Debug/App/testComponent.obj
