--- a/Builds/VisualStudio2019/Juce Dials_App.vcxproj
+++ b/Builds/VisualStudio2019/Juce Dials_App.vcxproj
@@ -1839,6 +1839,7 @@
     <ClCompile Include="..\..\db_minimal_gui\minimal_elements\HeaderBar.cpp" />
     <ClCompile Include="..\..\db_minimal_gui\minimal_elements\LookFeel.cpp" />
     <ClCompile Include="..\..\db_minimal_gui\minimal_elements\ModuleSpace.cpp" />
+    <ClCompile Include="..\..\db_minimal_gui\minimal_elements\ModuleSpaceElements\TabElement.cpp" />
     <ClCompile Include="..\..\db_minimal_gui\minimal_elements\SidewaysModuleSpace.cpp" />
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_audio_basics.cpp" />
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_audio_devices.cpp" />
@@ -1854,6 +1855,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_opengl.cpp" />
     <ClCompile Include="..\..\testingEnviron\Main.cpp" />
     <ClCompile Include="..\..\testingEnviron\MainComponent.cpp" />
+    <ClCompile Include="..\..\testingEnviron\testComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\..\..\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h" />
@@ -2532,10 +2534,12 @@
     <ClInclude Include="..\..\db_minimal_gui\minimal_elements\HeaderBar.h" />
     <ClInclude Include="..\..\db_minimal_gui\minimal_elements\LookFeel.h" />
     <ClInclude Include="..\..\db_minimal_gui\minimal_elements\ModuleSpace.h" />
+    <ClInclude Include="..\..\db_minimal_gui\minimal_elements\ModuleSpaceElements\TabElement.h" />
     <ClInclude Include="..\..\db_minimal_gui\minimal_elements\SidewaysModuleSpace.h" />
     <ClInclude Include="..\..\JuceLibraryCode\AppConfig.h" />
     <ClInclude Include="..\..\JuceLibraryCode\JuceHeader.h" />
     <ClInclude Include="..\..\testingEnviron\MainComponent.h" />
+    <ClInclude Include="..\..\testingEnviron\testComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\..\..\..\JUCE\modules\juce_audio_formats\codecs\flac\Flac Licence.txt" />
