Rearranging and streamlining classes, finished tab functionality with better visual look
+Some comments for future me's sanity

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/6991a1c7304911e5/INCLUDE
 Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/99ba81d12580ed10/TESTCOMPONENT.ipch
 Builds/VisualStudio2019/x64/Debug/App/TabElement.obj
 Builds/VisualStudio2019/x64/Debug/App/testComponent.obj
+Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/144d5e4cb8446dc0/BLANKBUTTON.ipch
