Setting preprocessor directives and adding ::juce
Forgot to set up preprocessor directives so as to not use juce namespace, corrected
Added new files to base module .h and .cpp files

--- a/.gitignore
+++ b/.gitignore
@@ -1,113 +1,3 @@
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/Juce Dials_App.lastbuildstate
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.command.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/rc.command.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/rc.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/rc.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Main.obj
-Builds/VisualStudio2019/x64/Debug/App/MainComponent.obj
-Builds/VisualStudio2019/x64/Debug/App/resources.res
-Builds/VisualStudio2019/x64/Debug/App/vc142.pdb
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.command.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.18444.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.log
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials.pdb
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials.ilk
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials.exe
-Builds/VisualStudio2019/x64/Debug/App/include_juce_opengl.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_gui_extra.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_gui_basics.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_graphics.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_events.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_data_structures.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_cryptography.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_core.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_audio_processors.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_audio_formats.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_audio_devices.obj
-Builds/VisualStudio2019/x64/Debug/App/include_juce_audio_basics.obj
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/45753dd4ecac4c0e/MAIN.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/26bcbb15456d8de9/MAINCOMPONENT.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/Browse.VC.opendb
-Builds/VisualStudio2019/.vs/Juce Dials/v16/Browse.VC.db
-Builds/VisualStudio2019/.vs/Juce Dials/v16/.suo
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19360.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.17412.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/DB_Knob.obj
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/a4b1badf7d9ea00b/INCLUDE_JUCE_GRAPHICS.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/4804349a191a73b4/DB_KNOB.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/cde40b015745a749/DB_LOOKFEEL.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/d17ef2a558f05fcb/INCLUDE_JUCE_GUI_BASICS.ipch
-Builds/VisualStudio2019/x64/Debug/App/DB_LookFeel.obj
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/CL.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.20356.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.10248.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.4656.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.6380.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.27420.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.27128.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.24728.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.24160.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23764.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.22860.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.17576.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.16752.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.8268.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.6372.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.29032.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.21356.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19856.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.19660.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.11588.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/BinaryData.obj
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e9dc5917e8bf3e14/INCLUDE_JUCE_AUDIO_DEVICES.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/791d5f8e81180eb3/HEADERBAR.ipch
-Builds/VisualStudio2019/x64/Debug/App/HeaderBar.obj
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.7832.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/ModuleSpace.obj
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/unsuccessfulbuild
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952.delete.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-rc.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-rc.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-cvtres.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link.23952-cvtres.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-rc.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-rc.read.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-cvtres.write.1.tlog
-Builds/VisualStudio2019/x64/Debug/App/Juce Dials_App.tlog/link-cvtres.read.1.tlog
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/dcb7ce52cedc0893/MODULESPACE.ipch
-*.tlog
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e23dd4667527c4e9/INCLUDE_JUCE_EVENTS.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/1191e2cd6411fa80/MODULESPACE.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/85731651e114f2bc/SIDEWAYSMODULESPACE.ipch
-Builds/VisualStudio2019/x64/Debug/App/SidewaysModuleSpace.obj
-Builds/VisualStudio2019/x64/Debug/App/LookFeel.obj
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/e082b4b243bb6b5/MODULESPACE.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/d3d4e5f55a8879e9/MODULESPACE.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/c825ad57ce0b0d6f/DB_LOOKFEEL.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/ae215eaccf88467a/SIDEWAYSMODULESPACE.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/acbd3c25f7f2196f/MAIN.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/a7071f082e0c306/JUCEHEADER.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/9a7d567872cf7855/HEADERBAR.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/748a0ec4ba6cd18/DB_MINIMAL_GUI.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/46f184f01ad097a9/HEADERBAR.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/3bf66d3f25882b80/MAINCOMPONENT.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/1dabc3e75bf0e6ce/LOOKFEEL.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/107a6ca862e421c2/LOOKFEEL.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/b43786ef88b95662/MAIN.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/42e6ca5a20c2bab5/MAINCOMPONENT.ipch
+Builds/VisualStudio2019/x64/
+Builds/VisualStudio2019/.vs/
 Juce Dials.jucer
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/531ca623b2643ebe/INCLUDE_JUCE_AUDIO_BASICS.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/1191722bd1ad1956/TESTCOMPONENT.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/3be920b1fd2c8155/TABELEMENT.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/44f64e9bce6b3d0e/TABELEMENT.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/6991a1c7304911e5/INCLUDE_JUCE_CORE.ipch
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/99ba81d12580ed10/TESTCOMPONENT.ipch
-Builds/VisualStudio2019/x64/Debug/App/TabElement.obj
-Builds/VisualStudio2019/x64/Debug/App/testComponent.obj
-Builds/VisualStudio2019/.vs/Juce Dials/v16/ipch/AutoPCH/144d5e4cb8446dc0/BLANKBUTTON.ipch
